dtm-16 4.7.3.1 small fix
fixed user profile tabs being too close to avatar, especially looked weird when using some languages

--- a/DTM-16/dtm-16.css
+++ b/DTM-16/dtm-16.css
@@ -5,8 +5,8 @@
     --qrcode-icon: block; /* block = ON, none = OFF - show or hide the discord logo from discord's qr codes (like on login screen) */
 }
 html {
-	--theme-ver: "DTM-16 4.7.3";
-	--theme-ver-date: "31 Oct 2020";
+	--theme-ver: "DTM-16 4.7.3.1";
+	--theme-ver-date: "5 Nov 2020";
 }
 .sidebarRegion-VFTUkN .side-8zPYf6 .socialLinks-3jqNFy:after {
 	content: var(--theme-ver) "\A" var(--theme-ver-date);
@@ -1210,7 +1210,7 @@ body {--background-message-hover: transparent}
 .top-28JiJ-{float: right;margin-top:-25px}
 .topSectionNormal-2-vo2m .top-28JiJ- {margin-top:0}
 .activity-1ythUs:not(.activityProfile-2bJRaP) {display:none}
-.tabBarContainer-1s1u-z {border:none}
+.tabBarContainer-1s1u-z {border:none;margin-top:20px}
 .header-QKLPzZ .avatar-3EQepX {transform:scale(1.5) translate(15px, 15px);border:solid 5px var(--background-tertiary);background-color:var(--background-tertiary)}
 .headerInfo-30uryT {margin-left:50px;margin-bottom:-20px}
 .topSectionStreaming-1Tpf5X, .topSectionSpotify-1lI0-P, .topSectionXbox-3fWLjS, .topSectionPlaying-1J5E4n {background: var(--background-tertiary)}
